# dependency-scout

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  scout.py  setup.py  start_workflow.py  triage.py  worker.py
.github/: dependency-scout.yml.example
activities/: README.md  classifier.py  depsdev.py  github.py  maintainer.py  models.py  osv.py  package_diff.py  pypi_metadata.py  release_age.py  release_notes.py  repo_config.py  scorecard.py  socket.py  version_lineage.py
api/: README.md  webhook.py
checks/: README.md  attestation.py  custom_checks.py  depsdev.py  maintainer.py  metadata.py  nvd.py  osv.py  package_diff.py  release_age.py  release_notes.py  scorecard.py  security_advisories.py  socket.py  version_lineage.py
classifiers/: README.md  __init__.py  _helpers.py  anthropic.py  ollama.py  openai.py
detections/: __init__.py  net_calls.yaml  obfuscation.yaml  persistence.yaml
docs/: architecture.md  configuration.md  contributing.md  deployment.md  extending.md  github-app-setup.md  security.md
ecosystems/: README.md  __init__.py  _registry.py  cargo.py  composer.py  docker.py  elm.py  github_actions.py  gomod.py  maven.py  mix.py  npm.py  nuget.py  pip.py  pub.py  remote.py  rubygems.py  swift.py  terraform.py
helpers/: README.md  batcher.py  cache.py  comment_formatter.py  config_provider.py  display.py  github_app.py  http.py  notification.py  pr_parser.py  prompts.py  temporal_client.py
models/: README.md  __init__.py  checks.py  package.py  pr.py  triage.py  verdict.py
pr_actions/: README.md  __init__.py  platform.py
remediators/: __init__.py  runner.py  uv.py
tests/: conftest.py  generate_fixtures.py  helpers.py  test_activities.py  test_attestation.py  test_batcher.py  test_cargo.py  test_check_wiring.py  test_classifier.py  test_comment_formatter.py  test_composer.py  test_custom_checks.py  test_depsdev_scorecard.py  test_detections.py  test_docker.py  test_dry_run.py  test_ecosystems_utils.py  test_elm.py  test_github.py  test_github_actions.py  test_github_app.py  test_gitlab.py  test_gomod.py  test_local_mode.py  test_maven.py  test_mix.py  test_nuget.py  test_package_diff.py  test_package_diff_extended.py  test_pr_action_display.py  test_pr_parser.py  test_pub.py  test_release_notes.py  test_remediators.py  test_remote_provider.py  test_repo_config.py  test_signal_wiring.py  test_socket.py  (+7 more)
(+25 files in other folders)
